# AIMM

./: FSM.py  Jetson Mount.3mf  README.md  Selectors.py  State.py  Zed Clamp.stl  Zed2i Mount (2).stl  Zed2i Wall Mount.stl  constants.py  main.py  new_code.py
arduino/: arduino_code.ino  new_serial_ard.ino  rosNode.py  serial_arduino.py  serial_test.py
urdfs/: cpu_cases.xacro  launchXML.py  lpv_gazebo.urdf.xacro  package.xml
urdfs/config/: aimm.urdf
urdfs/launch/: RAITE.launch.py  all.launch.py  localization_example.launch.py  rviz2_aimm.launch.py  rviz2_example.launch.py  usv_bringup.launch.py  view_robot.launch.py
